--- a/presell/front-end/index.html
+++ b/presell/front-end/index.html
@@ -1085,7 +1085,7 @@ System.Web.Mvc.StyleContext;
             <h2>Closing Date: Monday 1st September 2025</h2>
              <div class="form-check">
                 <input class="form-check-input" type="checkbox" name="agreeTsAndCs" id="agreeTsAndCsCheck">
-                <label class="form-check-label" for="agreeTsAndCsCheck">I have read and agree to the terms and conditions <a class="font-bold" href="#" target="_blank">HERE</a></label>
+            	<label class="form-check-label" for="agreeTsAndCsCheck">I have read and agree to the <a href="#" target="_blank">terms and conditions</a>
             </div> 
         </div>
     </div>
