--- a/presell/front-end/index.html
+++ b/presell/front-end/index.html
@@ -1024,7 +1024,12 @@ System.Web.Mvc.StyleContext;
         font-size: 10px;
     }
 
-     #agreeTsAndCsCheck {
+     .plus-minus-icon.disabled {
+        cursor: not-allowed !important;
+        opacity: 0.6;
+    }
+
+    #agreeTsAndCsCheck {
         position: relative;
         margin-top: 0;
         margin-left: 0;
@@ -2415,7 +2420,7 @@ let searchMode = 1;
 $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
-
+<script src="../caterer-presell-admin.js"></script>
 </html>
 <script nonce="MEba32IsSihqPe5jQESu9bDgcAEmBQwM5Wk/mMSTKIM=">
     document.addEventListener("DOMContentLoaded", function (event) { _csp.scanStyles(); });
