--- a/presell/front-end/index.html
+++ b/presell/front-end/index.html
@@ -1089,7 +1089,7 @@ System.Web.Mvc.StyleContext;
             <h2>Pre-Sell: Christmas 2025</h2>
             <h2>Closing Date: Monday 1st September 2025</h2>
             <input class="form-check-input" type="checkbox" name="agreeTsAndCs" id="agreeTsAndCsCheck">
-            <label class="form-check-label" for="agreeTsAndCsCheck">I have read and agree to the <a href="#" target="_blank">terms and conditions</a>
+            <label class="form-check-label" for="agreeTsAndCsCheck">I have read and agree to the <a href="https://www.booker.co.uk/-/media/Files/Documents/Legal/Booker-wholesale-Competition--Ts-and-Cs.docx?rev=a5a5dd399b7349039f1d17470813a584&hash=E6374D3A836B5A5417C66CD47C1A16FA" target="_blank">terms and conditions</a>
         </div>
     </div>
 <form action="/products/presell-product-list?ordername=1342" method="post">        <div id="buttons-bottom" class="text-right mb-sm-0 row d-lg-flex justify-content-lg-end justify-content-sm-end header-buttons pr-0 pb-md-0 mb-md-3 col mt-3">
