--- a/presell/front-end/index.html
+++ b/presell/front-end/index.html
@@ -1024,6 +1024,10 @@ System.Web.Mvc.StyleContext;
         font-size: 10px;
     }
 
+    main#presell_button .desktop-view .product-quantity-date {
+        width: -webkit-fill-available;
+    }
+
     .plus-minus-icon.disabled {
         cursor: not-allowed !important;
         opacity: 0.6;
