--- a/presell/management/new-header/index.html
+++ b/presell/management/new-header/index.html
@@ -89,7 +89,7 @@
     </select>
   </div>
 </div>
-<div class="row align-items-center mb-3 presellSelectedBranches d-none">
+<!--<div class="row align-items-center mb-3 presellSelectedBranches d-none">
   <div class="col-6">
     <p>Selected Branches</p>
   </div>
@@ -98,7 +98,7 @@
       
     </cpa-branches>
   </div>
-</div>
+</div>-->
 
 <div class="row d-flex align-items-center mb-3">
 <div class="col-6">
