--- a/presell/management/new-header/index.html
+++ b/presell/management/new-header/index.html
@@ -83,7 +83,7 @@
     Caterer Pre-sell
   </div>
   <div class="col-6">
-   <select name="isCatererOrRetailer" id="isCatererOrRetailer">
+   <select name="isCatererPresell" id="isCatererPresell">
       <option value="notApplicable">Not Applicable</option>
       <option value="caterer">Caterer</option>
     </select>
