--- a/presell/management/load-header/index.html
+++ b/presell/management/load-header/index.html
@@ -109,6 +109,6 @@
     <div class="mt-3 mb-3 main">
         <a href="/admin/portal">Return to Portal</a>
     </div>
-  <script src="../../caterer-presell-admin.js"></script>
+  <script src="../../caterer-presell-additions.js"></script>
 </body>
 </html>
