--- a/presell/management/new-header/index.html
+++ b/presell/management/new-header/index.html
@@ -438,7 +438,7 @@
 <div class="mt-3 mb-3 main">
 <a href="/admin/portal">Return to Portal</a>
 </div>
-<script src="../../caterer-presell-admin.js" nonce=""></script>
+<script src="../../caterer-presell-additions.js" nonce=""></script>
 </body>
 </html>
 
