--- a/presell/front-end/index.html
+++ b/presell/front-end/index.html
@@ -2434,7 +2434,7 @@ let searchMode = 1;
 $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
-<script src="../caterer-presell-admin.js"></script>
+<script src="../caterer-presell-additions.js"></script>
 
 </html>
 <script nonce="">
