--- a/presell/front-end/index.html
+++ b/presell/front-end/index.html
@@ -34,6 +34,7 @@
     <!-- <script nonce='MEba32IsSihqPe5jQESu9bDgcAEmBQwM5Wk/mMSTKIM=' t src="https://www.google.com/recaptcha/enterprise.js?render=6LdyyJolAAAAACgcsj49zrez-uIeeJU-aeVpZAa3"></script> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://www.booker.co.uk/css/trolley/home-branch-range.css?v=2.16.1.0" nonce=""/> 
+	<link rel="stylesheet" href="../preselladditions.css" >
 </head>
 
 <body>
@@ -1019,84 +1020,6 @@ System.Web.Mvc.StyleContext;
 
     
 
-<style nonce="">
-    main#presell_button .desktop-view .product-quantity-date-header p {
-        font-size: 10px;
-    }
-
-    main#presell_button .desktop-view .product-quantity-date {
-        width: -webkit-fill-available;
-    }
-
-    main#presell_button .mobile-view .product .product-details .product-name-priceMarked {
-        height: inherit;
-    }
-
-    .plus-minus-icon.disabled {
-        cursor: not-allowed !important;
-        opacity: 0.6;
-    }
-
-    #agreeTsAndCsCheck {
-        position: relative;
-        margin-top: 0;
-        margin-left: 0;
-    }
-
-    label[for="agreeTsAndCsCheck"] a {
-        color: #062F6E;
-        font-weight: bold;
-    }
-
-    @media  (max-width: 1150px) {
-        main#presell_button .mobile-view .product-quantity-date-header p {
-            font-size: 10px;
-        }
-    }
-
-    @media  (max-width: 500px) {
-        main#presell_button .mobile-view .product-quantity-date-header p {
-            font-size: 8px;
-        }
-    }
-
-    .main {
-        width: 100%
-    }
-
-    main#presell_button .mobile-view .product-quantity-date-header {
-        width: min-content;
-    }
-
-    .product-image img {
-        max-height: 96px;
-    }
-
-     @media (max-width: 1150px) {
-      
-      main#presell_button .mobile-view .product-quantity-date .plus-minus-icon {
-            width: 1em;
-            height: 1em;
-        }
-
-        main#presell_button .mobile-view .product .product-quantity-date {
-          width: 0;
-        }
-    }
-
-    @media (max-width: 675px) {
-        .mobile-view .product .prices-and-taxes-col {
-            align-items: center;
-        }
-    }
-
-    @media (max-width: 590px) {
-        .prices-and-taxes .col-6 {
-            flex: auto;
-            max-width: none;
-        }
-    }
-</style>
 <main id="presell_button" class="main mt-3">
     <div class="row">
         <div class="col-xs-12">
