--- a/presell/front-end/index.html
+++ b/presell/front-end/index.html
@@ -34,7 +34,7 @@
     <!-- <script nonce='MEba32IsSihqPe5jQESu9bDgcAEmBQwM5Wk/mMSTKIM=' t src="https://www.google.com/recaptcha/enterprise.js?render=6LdyyJolAAAAACgcsj49zrez-uIeeJU-aeVpZAa3"></script> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://www.booker.co.uk/css/trolley/home-branch-range.css?v=2.16.1.0" nonce=""/> 
-	<link rel="stylesheet" href="../preselladditions.css" >
+	<link rel="stylesheet" href="/preselladditions.css" >
 </head>
 
 <body>
