--- a/presell/front-end/index.html
+++ b/presell/front-end/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="shortcut icon" type="image/x-icon" href="https://www.booker.co.uk/images/favicon.ico" nonce="" />
     <!-- Styles -->
-    <link href='https://www.booker.co.uk/bundles/css?v=DEVCWzeOHjeFUgK8v2S6fSIal6pukRvijtNcblnuJHk1' rel='stylesheet' nonce='MEba32IsSihqPe5jQESu9bDgcAEmBQwM5Wk/mMSTKIM='/>
+    <link href='./bookertest-bundles.css' rel='stylesheet' nonce='MEba32IsSihqPe5jQESu9bDgcAEmBQwM5Wk/mMSTKIM='/>
 
     <link href="https://www.booker.co.uk/api/rts/styles?_bts=8DD78D19EB04B11" rel="stylesheet" nonce="" />
         <link rel="stylesheet" href="https://www.booker.co.uk/css/facia/booker.css?v=2.16.1.0" nonce="" />
@@ -34,7 +34,7 @@
     <!-- <script nonce='MEba32IsSihqPe5jQESu9bDgcAEmBQwM5Wk/mMSTKIM=' t src="https://www.google.com/recaptcha/enterprise.js?render=6LdyyJolAAAAACgcsj49zrez-uIeeJU-aeVpZAa3"></script> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://www.booker.co.uk/css/trolley/home-branch-range.css?v=2.16.1.0" nonce=""/> 
-	<link rel="stylesheet" href="/presell/front-end/preselladditions.css" >
+	
 </head>
 
 <body>
