--- a/custom-tools/file-converter/index.html
+++ b/custom-tools/file-converter/index.html
@@ -47,7 +47,7 @@
 	<main>
 		<div class="relative isolate p-6 pt-8 lg:px-8 bg-gray-100 text-left">	
 			<h1 class="text-balance text-4xl font-semibold tracking-tight text-gray-900 sm:text-4xl">File Converter</h1>
-			<p class="mt-8 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8">The aim is to be able to convert all interfaces into readable csv format. Need to get the actual files from Getronics for all interfaces to check each one actually works. Maintenance is the form of getting the latest interface fields to match this tool. This is fast moving, very ad hoc and subject to sudden changes and movements so it can break at any time. The convert process may break if the file is too big, this is being actively worked on to try and resolve.</p>
+			<p class="mt-8 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8">The aim is to be able to convert all interfaces into readable csv format. Need to get the actual files from Getronics for all interfaces to check each one actually works. Maintenance is the form of getting the latest interface fields to match this tool. The convert process may break if the file is too big, this is being worked on to try and resolve.</p>
 			<div class="mt-10 flex items-center justify-center gap-x-6">
 		
 				<input type="file" class="block w-full text-sm text-slate-500
