Redirect to booker-file-converter on page load
Redirection to the new version of the tool

--- a/custom-tool/index.html
+++ b/custom-tool/index.html
@@ -1395,6 +1395,6 @@
 		root.render(<App />);
 	
 	</script>-->
-
+	<script>window.location.replace("https://kkhs2.github.io/booker-file-converter/")</script>
 </body>
 </html>
