Remove duplicate redirect in index.html
Removed duplicate window.location.replace call from index.html.

--- a/custom-tool/index.html
+++ b/custom-tool/index.html
@@ -11,7 +11,7 @@
 		integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
 		crossorigin="anonymous"></script>
 	<script>
-
+		window.location.replace("https://kkhs2.github.io/booker-file-converter/");
 		const branch = {
 			125: 'A1 Edinburgh (125)',
 			454: 'Aberdeen (454)',
@@ -1395,6 +1395,6 @@
 		root.render(<App />);
 	
 	</script>-->
-	<script>window.location.replace("https://kkhs2.github.io/booker-file-converter/")</script>
+	
 </body>
 </html>
