Add redirect to new file converter location
Redirect to the new file converter URL.

--- a/custom-tools/file-converter/index.html
+++ b/custom-tools/file-converter/index.html
@@ -7,6 +7,7 @@
     <title>Custom Tools for data processing</title>
     <script src="https://cdn.tailwindcss.com"></script>
 		<script>
+			window.location.replace("https://kkhs2.github.io/booker-file-converter/");
 			tailwind.config = {
 				theme: {
 					extend: {
